--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,4 @@ project(CPUSchedulingOS)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(CPUSchedulingOS
-        main.cpp
-        Functions.h
-        readyQueue.cpp readyQueue.h process.cpp process.h)
+        main.cpp readyQueue.cpp process.cpp process.h readyQueue.h)
